--- a/src/index.html
+++ b/src/index.html
@@ -290,7 +290,7 @@
   
         <hr class="m-8">
   
-        <div class="space-y-5 gap-5">
+        <div class="space-y-5 gap-5 w-60">
           <div class="flex-col items-center gap-5">
             <div class="flex gap-2">
               <img src="/assets/Vector.png" alt="">
@@ -347,7 +347,7 @@
   
         <hr class="m-8">
   
-        <div class="space-y-5 gap-5">
+        <div class="space-y-5 gap-5 w-60">
           <div class="flex-col items-center gap-5">
             <div class="flex gap-2">
               <img src="/assets/Vector.png" alt="">
@@ -404,7 +404,7 @@
   
         <hr class="m-8">
   
-        <div class="space-y-5 gap-5">
+        <div class="space-y-5 gap-5 w-60">
           <div class="flex-col items-center gap-5">
             <div class="flex gap-2">
               <img src="/assets/Vector.png" alt="">
@@ -453,11 +453,11 @@
   </section>
 
   <section class="m-10 flex justify-center">
-    <div class="flex m-5">
+    <div class="flex m-5 w-96">
       <h1 class="bg-gradient-to-r from-[#4E4BE4] to-[#E862FE] bg-clip-text text-transparent text-2xl font-semibold">AI startup</h1>
     </div>
 
-    <div class="flex justify-center ml-5">
+    <div class="flex justify-center">
       <div class="flex m-5 ml-52">
         <div class="flex-col">
           <h1 class="mb-3">Company</h1>
@@ -472,7 +472,7 @@
       <div class="flex m-5 ml-52">
         <div class="flex-col">
           <h1 class="mb-3">Resources</h1>
-          <div class="text-sm">
+          <div class="text-sm w-52">
             <p>Blog post name goes here</p>
             <p>Blog post name goes here</p>
             <p>See all resources</p>
